# trec26-auto-judge

./: .gitignore  README.md  pyproject.toml
data/dragun-repgen/: .gitignore  README.md
data/dragun-repgen/topics/: transform-topics.py
data/rag25-auggen/: .gitignore  README.md
data/rag25-gen/: .gitignore
data/ragtime25/: .gitignore  README.md
data/ragtime25/topics/: transform-topics.py
judges/auto_nuggetizer/: .gitignore  Dockerfile  README.md  auto_nuggetizer.py  workflow.yml
judges/auto_nuggetizer/.devcontainer/: Dockerfile  devcontainer.json
judges/ir_axioms/: README.md
judges/naive/: README.md
judges/pyterrier_nugget_retrieval/: Dockerfile  README.md  workflow.yml
judges/pyterrier_retrieval/: README.md  __init__.py  retrieval_judge.py  workflow.yml
judges/tinyjudge/: README.md
